--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,45 @@
+.hero {
+  width: 100%;
+  height: 88vh;
+  max-height: 90vh;
+  padding: 0 5rem 5rem;
+  display: flex;
+  align-items: flex-end;
+}
+
+.hero_text {
+  width: 45vw;
+}
+
+.hero_subtext {
+  width: 32vw;
+}
+
+.hero_img {
+  text-align: center;
+}
+
+.hero_img img {
+  width: 80%;
+  height: auto;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  pointer-events: none;
+}
+
+@media screen and (min-width: 1600px) {
+  .hero_img {
+    width: 80%;
+    height: auto;
+  }
+}
+
+.typewriter > .typewriter_text {
+  border-right: 0.2rem solid #2A2A2A;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,6 +50,18 @@
 
 body {
   overflow-x: hidden;
+}
+
+h1 {
+  font-family: "Space Mono", monospace;
+  font-size: 3.5rem;
+  font-weight: 700;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 400;
 }
 
 nav {
