--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -9,7 +9,8 @@ $roboto: 'Roboto', sans-serif;
 $h1: 3.5rem; //56px big text for landing
 $h2: 3rem; //48px headers for sections
 $h3: 2.25rem; //36px
-$h4: 0.875rem; //14px subtitles
+$h4: 1.5rem; //24px
+$h5: 0.875rem; //14px subtitles
 $p: 1.125rem; //18px text
 
 
@@ -24,6 +25,8 @@ $regular: 400;
 $white: #FFF;
 $black: #2A2A2A;
 $blue: #3D75B7;
+$gray: #93A3B7;
+$silverblue: #DAE5F1;
 
 $highlightGreen: #0ACF83;
 $highlightBlue: #1ABCFE;
