--- a/static/css/_globals.scss
+++ b/static/css/_globals.scss
@@ -6,6 +6,11 @@
     min-height: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
 body {
     overflow-x: hidden;
 }
@@ -14,6 +19,37 @@ h1 {
     font-family: $spacemono;
     font-size: $h1;
     font-weight: $bold;
+}
+
+h2 {
+    font-family: $spacemono;
+    font-size: 2.5rem;
+    font-weight: $bold;
+}
+
+@media screen and (min-width: 1600px) {
+    h2 {
+        font-size: $h2;
+    }
+}
+
+h3 {
+    font-family: $roboto;
+    font-size: $h3;
+    font-weight: $regular;
+}
+
+h4 {
+    font-family: $roboto;
+    font-size: $h4;
+    font-weight: $bold;
+}
+
+h5 {
+    font-family: $spacemono;
+    font-size: $h5;
+    font-weight: $regular;
+    text-transform: uppercase;
 }
 
 p {
