--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -1,6 +1,6 @@
 .hero {
     width: 100%;
-    height: 88vh;
+    height: 90vh;
     max-height: 90vh;
     padding: 0 5rem 5rem;
     display: flex;
@@ -36,3 +36,154 @@
 .typewriter > .typewriter_text {
     border-right: 0.2rem solid $black;
 }
+
+.scrollDown {
+    position: absolute;
+    font-size: 2rem;
+    color: $silverblue;
+    bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    animation: chevronFade 2s ease-in-out infinite;
+    a, a:visited {
+        text-decoration: none;
+        color: $silverblue;
+    }
+}
+
+@keyframes chevronFade {
+    0% {
+        opacity: 0;
+        bottom: 50px;
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        bottom: 40px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .scrollDown {
+        display: none;
+    }
+    .hero {
+        display: block;
+    }
+    .hero_text, .hero_subtext {
+        width: 100%;
+    }
+    .hero_img {
+        margin-top: 2rem;
+        img {
+            max-width: 60%;
+        }
+    }
+}
+
+@media screen and (max-width: 879px) {
+    .hero_img {
+        img {
+            max-width: 65%;
+        }
+    }
+}
+
+// case studies
+.casestudy {
+    background-color: $white;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+#study1 {
+    background-image: url(/images/casestudy_bucsa.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    pointer-events: none;
+}
+
+#study2 {
+    background-image: url(/images/casestudy_bumpcall.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    pointer-events: none;
+}
+
+.casestudy_info {
+    pointer-events: all;
+    position: absolute;
+    width: 40vw;
+    height: 100%;
+    padding: 5% 8%;
+}
+
+#study1_card {
+    background-color: #1A1A1A;
+    color: $white;
+}
+
+#study2_card {
+    background-color: #FF6B00;
+    color: $white;
+}
+
+.casestudy_info_card_padding {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.casestudy_info_card *:not(:last-child) {
+    margin-bottom: 1.875rem;
+}
+
+.casestudy_btn {
+    background-color: transparent;
+    border: 2px solid $white;
+    border-radius: 10px;
+    padding: 1rem 1.75rem;
+    text-align: center;
+    display: inline-block;
+    color: $white;
+    cursor: pointer;
+    transition: all 200ms ease-in;
+}
+
+.casestudy_btn:hover, .casestudy_btn:focus {
+    background-color: $white;
+    color: $black;
+    box-shadow: 0px 10px 15px rgba(100, 100, 100, 0.25);
+    h5 {
+        font-weight: $bold;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .casestudy_info {
+        width: 100%;
+    }
+    #study1_card {
+        background-color: rgba(26, 26, 26, 0.85);
+    }
+    #study2_card {
+        background-color: rgba(255, 107, 0, 0.7);
+    }
+}
+
+// @media screen and (max-width: 767px) {
+//     #study1, #study2 {
+//         background-attachment: scroll;
+//     }
+// }
