--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -120,6 +120,24 @@
     pointer-events: none;
 }
 
+#study3 {
+    background-image: url(/images/casestudy_wasteless.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    pointer-events: none;
+}
+
+#study4 {
+    background-image: url(/images/casestudy_productvision.png);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    pointer-events: none;
+}
+
 .casestudy_info {
     pointer-events: all;
     position: absolute;
@@ -135,6 +153,16 @@
 
 #study2_card {
     background-color: #FF6B00;
+    color: $white;
+}
+
+#study3_card {
+    background-color: rgba(135, 209, 241, 0.9);
+    color: $white;
+}
+
+#study4_card {
+    background-color: #2F4790;
     color: $white;
 }
 
@@ -178,7 +206,13 @@
         background-color: rgba(26, 26, 26, 0.85);
     }
     #study2_card {
-        background-color: rgba(255, 107, 0, 0.7);
+        background-color: rgba(255, 107, 0, 0.8);
+    }
+    #study3_card {
+        background-color: rgba(135, 209, 241, 0.9);
+    }
+    #study4_card {
+        background-color: rgba(47, 71, 144, 0.8);
     }
 }
 
