--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -5,6 +5,7 @@
     padding: 0 5rem 5rem;
     display: flex;
     align-items: flex-end;
+    z-index: 2;
 }
 
 .hero_text {
@@ -109,6 +110,7 @@
     background-size: cover;
     background-position: right;
     pointer-events: none;
+    z-index: 2;
 }
 
 #study2 {
@@ -118,6 +120,7 @@
     background-size: cover;
     background-position: right;
     pointer-events: none;
+    z-index: 2;
 }
 
 #study3 {
@@ -127,6 +130,7 @@
     background-size: cover;
     background-position: right;
     pointer-events: none;
+    z-index: 2;
 }
 
 #study4 {
@@ -136,6 +140,19 @@
     background-size: cover;
     background-position: right;
     pointer-events: none;
+    z-index: 2;
+}
+
+#study5 {
+    background-color: #FFC100;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    pointer-events: none;
+    z-index: 1;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .casestudy_info {
@@ -163,6 +180,11 @@
 
 #study4_card {
     background-color: #2F4790;
+    color: $white;
+}
+
+#study5_card {
+    background-color: #FFA09E;
     color: $white;
 }
 
@@ -198,6 +220,35 @@
     }
 }
 
+.casestudy_unwrap_pic {
+    position: absolute;
+    display: block;
+    img {
+        width: 36rem;
+        height: auto;
+    }
+}
+.unwrap_phone1 {
+    top: 2%;
+    left: 56%;
+}
+
+.unwrap_phone2 {
+    top: 4%;
+    left: 27%;
+}
+
+.unwrap_phone3 {
+    top: 50%;
+    left: 57%;
+}
+
+@media screen and (min-width: 1600px) {
+    .casestudy_unwrap_pic > img {
+        width: 50rem;
+    }
+}
+
 @media screen and (max-width: 1023px) {
     .casestudy_info {
         width: 100%;
@@ -213,6 +264,16 @@
     }
     #study4_card {
         background-color: rgba(47, 71, 144, 0.8);
+    }
+    #study5 {
+        background-image: url(/images/casestudy_unwrap.png);
+        z-index: 2;
+        .casestudy_unwrap_pic, .unwrap_phone1, .unwrap_phone2, .unwrap_phone3 {
+            display: none;
+        }
+    }
+    #study5_card {
+        background-color: rgba(255, 160, 158, 0.8);
     }
 }
 
