--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -1,17 +1,16 @@
 footer {
     position: relative;
     width: 100%;
-    height: 12vh;
+    height: 40vh;
     background-color: $black;
     color: $white;
-    padding: 0 5%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    padding: 3rem 5% 0;
 }
 
 footer .logo {
     width: auto;
+    position: absolute;
+    bottom: 1.5rem;
 }
 
 footer a, footer a:visited {
@@ -20,27 +19,56 @@ footer a, footer a:visited {
     font-feature-settings: "calt" 0;
 }
 
-.socials, .social_link {
-    transition: all 200ms ease-in;
+.copyright {
+    text-align: center;
+    p {
+        font-size: $h4;
+    }
 }
 
+.copyright_text {
+    font-family: $spacemono;
+    margin-bottom: 1.5rem;
+}
 
-.socials:hover {
-    color: $gray;
-    a {
-        color: $gray;
-    }
-    .social_link:hover {
-        color: $white;
-        text-decoration: underline;
-    }
+.socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: $h3;
+    gap: 2rem;
+}
+
+.social_link {
+    transition: all 200ms ease;
+}
+
+.social_link:hover {
+    transform: scale(1.25);
+    text-shadow: 0px 10px 15px rgba(120, 120, 120, 0.35);
+}
+
+.social_link.mail:hover {
+    color: $highlightRed;
+}
+
+.social_link.github:hover {
+    color: $highlightYellow;
+}
+
+.social_link.linkedin:hover {
+    color: $highlightBlue;
+}
+
+.social_link.insta:hover {
+    color: $highlightPurple;
 }
 
 @media screen and (max-width: 1023px) {
     footer .logo {
         font-size: $h4;
     }
-    .socials, .social_link, .socials p, footer p {
-        font-size: $h5;
+    .copyright p {
+        font-size: 2vw;
     }
 }
