--- a/static/css/main.css
+++ b/static/css/main.css
@@ -478,17 +478,16 @@ nav .logo a, nav .logo a:visited {
 footer {
   position: relative;
   width: 100%;
-  height: 12vh;
+  height: 40vh;
   background-color: #2A2A2A;
   color: #FFF;
-  padding: 0 5%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  padding: 3rem 5% 0;
 }
 
 footer .logo {
   width: auto;
+  position: absolute;
+  bottom: 1.5rem;
 }
 
 footer a, footer a:visited {
@@ -497,29 +496,58 @@ footer a, footer a:visited {
   font-feature-settings: "calt" 0;
 }
 
-.socials, .social_link {
-  transition: all 200ms ease-in;
+.copyright {
+  text-align: center;
 }
 
-.socials:hover {
-  color: #93A3B7;
+.copyright p {
+  font-size: 1.5rem;
 }
 
-.socials:hover a {
-  color: #93A3B7;
+.copyright_text {
+  font-family: "Space Mono", monospace;
+  margin-bottom: 1.5rem;
 }
 
-.socials:hover .social_link:hover {
-  color: #FFF;
-  text-decoration: underline;
+.socials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.25rem;
+  gap: 2rem;
+}
+
+.social_link {
+  transition: all 200ms ease;
+}
+
+.social_link:hover {
+  transform: scale(1.25);
+  text-shadow: 0px 10px 15px rgba(120, 120, 120, 0.35);
+}
+
+.social_link.mail:hover {
+  color: #FF7262;
+}
+
+.social_link.github:hover {
+  color: #FCCC63;
+}
+
+.social_link.linkedin:hover {
+  color: #1ABCFE;
+}
+
+.social_link.insta:hover {
+  color: #A259FF;
 }
 
 @media screen and (max-width: 1023px) {
   footer .logo {
     font-size: 1.5rem;
   }
-  .socials, .social_link, .socials p, footer p {
-    font-size: 0.875rem;
+  .copyright p {
+    font-size: 2vw;
   }
 }
 /*# sourceMappingURL=main.css.map */
