--- a/static/css/main.css
+++ b/static/css/main.css
@@ -501,15 +501,16 @@ footer a, footer a:visited {
 }
 
 .copyright p {
-  font-size: 1.5rem;
+  font-size: 0.875rem;
 }
 
 .copyright_text {
   font-family: "Space Mono", monospace;
-  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
 }
 
 .socials {
+  margin-top: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -545,9 +546,6 @@ footer a, footer a:visited {
 @media screen and (max-width: 1023px) {
   footer .logo {
     font-size: 1.5rem;
-  }
-  .copyright p {
-    font-size: 2vw;
   }
 }
 /*# sourceMappingURL=main.css.map */
