--- a/static/css/_nav.scss
+++ b/static/css/_nav.scss
@@ -86,6 +86,7 @@ nav .logo a, nav .logo a:visited {
         align-items: center;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        z-index: 5;
     }
     .menu li {
         opacity: 0;
@@ -103,10 +104,14 @@ nav .logo a, nav .logo a:visited {
     .hamburger {
         display: block;
     }
+    .item.active a {
+        color: $white;
+    }
 }
 
 .nav-active {
     transform: translateX(0%);
+    z-index: 5;
 }
 
 @keyframes navLinkFade {
