--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -96,6 +96,61 @@
     }
 }
 
+// current works
+.current {
+    background-color: $black;
+    color: $white;
+    width: 100%;
+    height: 70vh;
+    padding: 0 2rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 5vw;
+}
+
+.current_pic {
+    flex: 2;
+    text-align: right;
+}
+
+.current_pic > img {
+    width: auto;
+    height: 50vh;
+}
+
+.current_info {
+    flex: 3;
+}
+
+.current_info *:not(:last-child) {
+    margin-bottom: 1.875rem;
+}
+
+.current_co {
+    padding-bottom: 5rem;
+}
+
+@media screen and (max-width: 1023px) {
+    .current {
+        background-image: url(/images/casestudy_spark.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: auto;
+        padding: 5% 8%;
+    }
+    .current_pic {
+        display: none;
+    }
+    .current_info {
+        background-color: rgba(42, 42, 42, 0.75);
+    }
+    .current_info * {
+        margin-bottom: 1.875rem;
+    }
+}
+
 // case studies
 .casestudy {
     background-color: $white;
