pictures and tweaks

--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -11,10 +11,12 @@
 
 .hero_text {
     width: 45vw;
+    color: $black;
 }
 
 .hero_subtext {
     width: 32vw;
+    color: $ltblack;
 }
 
 .hero_img {
