--- a/static/css/_about.scss
+++ b/static/css/_about.scss
@@ -10,12 +10,15 @@
 
 .about_text {
     flex: 3;
-    color: $black;
+    h2 {
+        color: $black;
+    }
     p {
+        color: $ltblack;
         padding-right: 8vw;
         a {
             text-decoration: none;
-            color: $black;
+            color: $ltblack;
             transition: color 150ms ease-in;
         }
         a:hover {
@@ -86,6 +89,63 @@
     z-index: 1;
 }
 
+.about_community {
+    width: 100%;
+    height: auto;
+    background-color: $white;
+    padding: 5rem 10rem 10rem 10rem;
+    color: $black;
+}
+
+.about_com_header {
+    margin-bottom: 5rem;
+}
+
+.about_com_card {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.about_com_card_info {
+    flex: 1;
+    a {
+        text-decoration: none;
+        color: $blue;
+        transition: color 150ms ease-in;
+    }
+    a:hover {
+        color: $highlightBlue;
+    }
+    h5, p {
+        color: $ltblack;
+    }
+}
+
+.about_img_section {
+    margin-top: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.about_img_indiv {
+    flex: 1 1 calc(25% - 10px);
+    margin: 5px;
+    img {
+        width: 100%;
+        height: auto;
+        transition: all 350ms ease-in-out;
+    }
+}
+
+.about_img_indiv img:hover {
+    transform: scale(115%);
+    box-shadow: 0px 10px 15px rgba(42, 42, 42, 0.35);
+}
+
+// tablet and mobile
 @media screen and (max-width: 1023px) {
     .about {
         flex-direction: column;
@@ -113,6 +173,9 @@
             left: -20px;
         }
     }
+    .about_community {
+        padding: 5rem 5rem 10rem 5rem;
+    }
     .about_img:hover {
         .behind_image.bi1 {
             top: -20px;
@@ -122,5 +185,14 @@
             top: 20px;
             left: 20px;
         }
+    }
+    .about_com_card {
+        flex-direction: column;
+    }
+    .paragraph_text {
+        margin-top: 2rem;
+    }
+    .about_img_indiv {
+        flex: 1 1 calc(50% - 10px);
     }
 }
