global overflow wrapper test

--- a/static/css/_globals.scss
+++ b/static/css/_globals.scss
@@ -8,10 +8,14 @@
 
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
-body {
+// body {
+//     overflow-x: hidden;
+// }
+
+.wrapper {
     overflow-x: hidden;
 }
 
