--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -136,6 +136,7 @@
 @media screen and (max-width: 1023px) {
     .current {
         background-image: url(/images/casestudy_spark.png);
+        background: linear-gradient(rgba(42, 42, 42, 0.75), rgba(42, 42, 42, 0.75));
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
