mobile responsive edits

--- a/static/css/_globals.scss
+++ b/static/css/_globals.scss
@@ -8,15 +8,10 @@
 
 html {
     scroll-behavior: smooth;
-    // overflow-x: hidden;
+    overflow-x: hidden;
 }
 
-// body {
-//     overflow-x: hidden;
-// }
-
-.wrapper {
-    position: fixed;
+body {
     overflow-x: hidden;
 }
 
