--- a/static/css/_nav.scss
+++ b/static/css/_nav.scss
@@ -84,9 +84,9 @@ nav .logo a, nav .logo a:visited {
         display: flex;
         flex-direction: column;
         align-items: center;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
-        z-index: 5;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+        z-index: -1;
     }
     .menu li {
         opacity: 0;
@@ -111,6 +111,7 @@ nav .logo a, nav .logo a:visited {
 
 .nav-active {
     transform: translateX(0%);
+    opacity: 1;
     z-index: 5;
 }
 
