--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -37,7 +37,7 @@ footer a, footer a:visited {
     align-items: center;
     justify-content: center;
     font-size: $h3;
-    gap: 2rem;
+    gap: 2rem !important;
 }
 
 .social_link {
