--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -1,7 +1,7 @@
 footer {
     position: relative;
     width: 100%;
-    height: 45vh;
+    height: 55vh;
     background-color: $black;
     color: $white;
     padding: 3rem 5% 0;
@@ -21,6 +21,7 @@ footer a, footer a:visited {
 
 .copyright {
     text-align: center;
+    margin-bottom: 2rem;
     p {
         font-size: $h5;
     }
@@ -68,5 +69,11 @@ footer a, footer a:visited {
 @media screen and (max-width: 1023px) {
     footer .logo {
         font-size: $h4;
+    }
+    .socials {
+        gap: 0;
+    }
+    .social_link {
+        margin: 0 1rem;
     }
 }
