--- a/static/css/_nav.scss
+++ b/static/css/_nav.scss
@@ -84,12 +84,14 @@ nav .logo a, nav .logo a:visited {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
         opacity: 0;
         transition: opacity 0.3s ease-in-out;
         z-index: -1;
     }
     .menu li {
         opacity: 0;
+        margin-top: 8rem;
     }
     .menu li a {
         color: $white;
