--- a/static/css/main.css
+++ b/static/css/main.css
@@ -382,7 +382,7 @@
 
 .about_text p {
   color: #3D3D3D;
-  padding-right: 8vw;
+  padding-right: 4vw;
 }
 
 .about_text p a {
@@ -522,9 +522,13 @@
 @media screen and (max-width: 1023px) {
   .about {
     flex-direction: column;
+    padding: 5rem 2rem;
   }
   .about_img {
     margin-bottom: 45vh;
+  }
+  .about_text {
+    margin-top: 5rem;
   }
   .before_image, .after_image {
     left: 0;
@@ -547,7 +551,7 @@
     left: -20px;
   }
   .about_community {
-    padding: 5rem 5rem 10rem 5rem;
+    padding: 5rem 2rem;
   }
   .about_img:hover .behind_image.bi1 {
     top: -20px;
@@ -568,6 +572,8 @@
   }
 }
 
+/* your css rules for ipad portrait */
+/* your css rules for ipad landscape */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -714,12 +720,14 @@ nav .logo a, nav .logo a:visited {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
     z-index: -1;
   }
   .menu li {
     opacity: 0;
+    margin-top: 8rem;
   }
   .menu li a {
     color: #FFF;
@@ -771,7 +779,7 @@ nav .logo a, nav .logo a:visited {
 footer {
   position: relative;
   width: 100%;
-  height: 45vh;
+  height: 55vh;
   background-color: #2A2A2A;
   color: #FFF;
   padding: 3rem 5% 0;
@@ -791,6 +799,7 @@ footer a, footer a:visited {
 
 .copyright {
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .copyright p {
@@ -839,6 +848,12 @@ footer a, footer a:visited {
 @media screen and (max-width: 1023px) {
   footer .logo {
     font-size: 1.5rem;
+  }
+  .socials {
+    gap: 0;
+  }
+  .social_link {
+    margin: 0 1rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
