ipad media queries

--- a/static/css/_about.scss
+++ b/static/css/_about.scss
@@ -192,6 +192,7 @@
     }
     .about_com_card {
         flex-direction: column;
+        align-items: flex-start;
     }
     .paragraph_text {
         margin-top: 2rem;
