--- a/static/css/_home.scss
+++ b/static/css/_home.scss
@@ -375,3 +375,45 @@
     //     background-position: center;
     // }
 }
+
+/* your css rules for ipad portrait */
+@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
+    .hero {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+}
+
+/* your css rules for ipad landscape */
+@media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
+    #study1 {
+        background-attachment: scroll;
+    }
+    #study2 {
+        background-attachment: scroll;
+    }
+    #study3 {
+        background-attachment: scroll;
+    }
+    #study4 {
+        background-attachment: scroll;
+    }
+    #study5 {
+        background-image: url(/images/casestudy_unwrap.png);
+        background-attachment: scroll;
+        background-repeat: no-repeat;
+        background-size: cover;
+        pointer-events: none;
+        z-index: 2;
+        .casestudy_unwrap_pic, .unwrap_phone1, .unwrap_phone2, .unwrap_phone3 {
+            display: none;
+        }
+    }
+    .current {
+        gap: 0;
+    }
+    .current_info {
+        margin-left: 2rem;
+    }
+}
