--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -84,3 +84,13 @@ footer a, footer a:visited {
         margin: 0 1rem;
     }
 }
+
+/* your css rules for ipad pro landscape */
+@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+    .socials {
+        gap: 0;
+    }
+    .social_link {
+        margin: 0 1rem;
+    }
+}
