--- a/static/css/main.css
+++ b/static/css/main.css
@@ -371,8 +371,50 @@
   }
 }
 
+/* your css rules for ipad pro portrait */
+@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+}
+
 /* your css rules for ipad landscape */
 @media all and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) {
+  #study1 {
+    background-attachment: scroll;
+  }
+  #study2 {
+    background-attachment: scroll;
+  }
+  #study3 {
+    background-attachment: scroll;
+  }
+  #study4 {
+    background-attachment: scroll;
+  }
+  #study5 {
+    background-image: url(/images/casestudy_unwrap.png);
+    background-attachment: scroll;
+    background-repeat: no-repeat;
+    background-size: cover;
+    pointer-events: none;
+    z-index: 2;
+  }
+  #study5 .casestudy_unwrap_pic, #study5 .unwrap_phone1, #study5 .unwrap_phone2, #study5 .unwrap_phone3 {
+    display: none;
+  }
+  .current {
+    gap: 0;
+  }
+  .current_info {
+    margin-left: 2rem;
+  }
+}
+
+/* your css rules for ipad pro landscape */
+@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
   #study1 {
     background-attachment: scroll;
   }
@@ -617,6 +659,23 @@
 
 /* your css rules for ipad portrait */
 /* your css rules for ipad landscape */
+/* your css rules for ipad pro landscape */
+@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .about {
+    flex-direction: column;
+    padding: 5rem 2rem;
+  }
+  .about_text {
+    margin-left: 2rem;
+  }
+  .about_text p {
+    padding-right: 0;
+  }
+  .about_community {
+    padding: 5rem 2rem;
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -899,6 +958,16 @@ footer a, footer a:visited {
 
 /* your css rules for ipad landscape */
 @media all and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) {
+  .socials {
+    gap: 0;
+  }
+  .social_link {
+    margin: 0 1rem;
+  }
+}
+
+/* your css rules for ipad pro landscape */
+@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
   .socials {
     gap: 0;
   }
