--- a/static/css/_about.scss
+++ b/static/css/_about.scss
@@ -212,7 +212,7 @@
 // }
 
 /* your css rules for ipad pro landscape */
-@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media all and (max-width: 1194px) and (max-height: 834px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
     .about {
         flex-direction: column;
         padding: 5rem 2rem;
