--- a/static/css/_footer.scss
+++ b/static/css/_footer.scss
@@ -75,18 +75,8 @@ footer a, footer a:visited {
     }
 }
 
-/* your css rules for ipad landscape */
-@media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
-    .socials {
-        gap: 0;
-    }
-    .social_link {
-        margin: 0 1rem;
-    }
-}
-
 /* your css rules for ipad pro landscape */
-@media all and (device-width: 1024px) and (device-height: 1366px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media all and (max-width: 1194px) and (max-height: 834px) and (orientation:landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
     .socials {
         gap: 0;
     }
