--- a/static/css/main.css
+++ b/static/css/main.css
@@ -634,6 +634,121 @@
   }
 }
 
+.csheader {
+  height: 90vh;
+}
+
+.bucsa_header_img {
+  width: 100%;
+  height: 100%;
+  background-image: url(/images/casestudy_imgs_bucsa/bucsa_header.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.casestudy_section {
+  width: 100%;
+  height: auto;
+  padding: 4rem 10% 8rem 10%;
+  color: #2A2A2A;
+}
+
+.casestudy_section.csoverview {
+  width: 100%;
+  height: auto;
+  background-color: #FFF;
+}
+
+.casestudy_section.csresearch {
+  width: 100%;
+  height: auto;
+  background-color: #DAE5F1;
+}
+
+.casestudy_section.csdesign {
+  width: 100%;
+  height: auto;
+  background-color: #FFF;
+}
+
+.casestudy_section.csfinal_design {
+  width: 100%;
+  height: auto;
+  background-color: #DAE5F1;
+}
+
+.casestudy_section.csreflection {
+  width: 100%;
+  height: auto;
+  background-color: #FFF;
+}
+
+.cs_header {
+  margin-bottom: 4rem;
+}
+
+.overview_grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.h4sub {
+  margin-bottom: 0.5rem;
+}
+
+.cs_content {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.cs_content_title {
+  flex: 1;
+}
+
+.cs_content_text {
+  flex: 3;
+}
+
+.cs_content a {
+  text-decoration: none;
+  color: #2A2A2A;
+  font-weight: 700;
+  transition: color 200ms ease-in;
+}
+
+.cs_content a:hover {
+  color: #3D75B7;
+}
+
+.cs_content_text {
+  margin-top: 0.5rem;
+}
+
+.cs_overview_img {
+  width: 100%;
+  height: auto;
+  margin-top: 4rem;
+}
+
+.cs_overview_img img {
+  width: 100%;
+  height: auto;
+}
+
+#original_wordpress_grid {
+  margin-top: 4rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  column-gap: 1rem;
+}
+
+#original_wordpress_grid img {
+  width: 100%;
+  height: auto;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
